# canvas-ta-assistant

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  ARCHITECTURE.md  AUTHENTICATION_GUIDE.md  AUTH_MIGRATION_GUIDE.md  CANVAS_DATA_STRUCTURES.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SERVERLESS.md  Dockerfile  EMAIL_WHITELIST_SETUP.md  IMPLEMENTATION_COMPLETE.md  README.md  SECURITY.md  VALIDATION_SUMMARY.md  auth.py  canvas_sync.py  database.py  deploy-infrastructure.sh  deploy-lambda.sh  deploy-serverless.sh  deploy.sh  docker-build-and-run.sh  docker-compose.yml  fix_course_id_formats.sh  lambda_handler.py  lambda_handler_wrapper.py  main.py  minimal_peer_review_tracker.py  pyproject.toml  setup_email_whitelist.sh  sync_canvas_data.py  test_event.json  test_lambda.py
.claude/agents/: code-improvement-scanner.md  react-ui-expert.md  unit-test-writer.md
.claude/skills/canvas-api-expert/: SKILL.md
.github/: GITHUB_ACTIONS_SETUP.md
.github/workflows/: ci.yml  deploy-backend.yml  deploy-frontend.yml  deploy-lambda.yml  deploy-serverless.yml  deploy.yml  security.yml  terraform.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/phases/02-posting-logic/: 02-02-PLAN.md
.planning/phases/04-unified-refresh/: 04-02-PLAN.md  04-03-SUMMARY.md
.planning/phases/06-grader-identity-tracking-sync-grader-id-graded-at-from-canvas-sync-ta-instructor-users-ta-breakdown-mode-setting-update-enhancedtadashboard-ta-breakdown-table/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-04-PLAN.md  06-04-SUMMARY.md  06-CONTEXT.md  06-RESEARCH.md  06-VALIDATION.md
.planning/quick/1-fix-course-selection-not-propagating-to-/: 1-PLAN.md  1-SUMMARY.md
.planning/quick/2-research-the-canvas-api-and-determine-wh/: 2-PLAN.md  2-SUMMARY.md
.planning/quick/3-the-last-updated-time-on-the-main-dashbo/: 3-PLAN.md  3-SUMMARY.md
.planning/quick/4-filter-enrollment-sync-history-to-only-s/: 4-PLAN.md  4-SUMMARY.md
.planning/quick/5-remove-duplicate-course-info-subtitle-fr/: 5-PLAN.md  5-SUMMARY.md
.planning/quick/6-fix-assignment-group-eligibility-not-app/: 6-PLAN.md  6-SUMMARY.md
.planning/quick/7-fix-settings-page-late-day-eligible-assi/: 7-PLAN.md  7-SUMMARY.md
.planning/quick/8-review-the-calculations-for-the-differen/: 8-CONTEXT.md  8-PLAN.md  8-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/todos/done/: 2026-03-01-fix-late-day-penalty-calculation-logic.md
.planning/todos/pending/: 2026-03-01-add-exportable-reports-csv-and-pdf.md  2026-03-01-add-grade-distribution-visualizations.md  2026-03-01-add-grader-identity-tracking.md  2026-03-01-add-student-at-risk-alerts.md  2026-03-01-add-ta-grading-deadlines.md  2026-03-07-add-penalty-summary-view-by-assignment-on-late-days-tracking-page.md
backend-canvas-fastapi/: archive_main_original.py  archive_minimal_peer_review_tracker.py  config.py  debug_endpoint.py  dependencies.py  main.py  main_original.py  models.py  pyproject.toml  test_peer_reviews.py
backend-canvas-fastapi/routers/: __init__.py  assignments.py  auth.py  background.py  cache.py  distribution.py  health.py  late_days.py  peer_reviews.py  statistics.py  submissions.py  ta_management.py
backend-canvas-fastapi/services/: __init__.py  cache.py  ta_processing.py
canvas-react/: .dockerignore  .env.dev  .env.example  .env.production  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
canvas-react/src/: AdminDashboard.jsx  App.jsx  EnhancedTADashboard.jsx  EnhancedTADashboard.test.jsx  EnrollmentTracking.jsx  EnrollmentTracking.test.jsx  GradeAnalysis.jsx  GradeAnalysis.test.jsx  LateDaysTracking.jsx  LateDaysTracking.test.jsx  PeerReviewTracking.jsx  PeerReviewTracking.test.jsx  Settings.jsx  Settings.test.jsx  SimpleDashboard.jsx  TAGradingDashboard 2.jsx  TAGradingDashboard.jsx  api.js  aws-config.js  main.jsx
canvas-react/src/components/: AssignmentStatusBreakdown.jsx  AssignmentStatusBreakdown.test.jsx  AuthWrapper.jsx  GradeBoxPlot.jsx  GradeBoxPlot.test.jsx  GradeHistogram.jsx  GradeHistogram.test.jsx  GradingScheduleSummary.jsx  GradingScheduleSummary.test.jsx  LoginForm.jsx  Navigation.jsx  SimpleAuthWrapper.jsx  SubmissionStatusCards.jsx
canvas-react/src/hooks/: useAuth.js  useExpandableSet.js  useSSEPost.js
canvas-react/src/utils/: dates.js  dates.test.js
docs/: AGENTS.md  ARCHITECTURE.md  AUTHENTICATION.md  CANVAS_DATA_STRUCTURES.md  SECURITY.md
docs/plans/: 2026-02-22-timezone-setting-design.md  2026-03-03-sync-db-lock-design.md  2026-03-03-sync-db-lock.md
lambda/: canvas_data_fetcher.py  cognito_presignup.py  deploy.sh  lambda_function.py  requirements.txt
scripts/: cleanup-dev-resources.sh  deploy-frontend.sh  deploy-production.sh  deploy-sandbox.sh  manage_users.py  manage_whitelist.sh  package-lambda-api.sh  package-lambda-data-fetcher.sh  package-lambda-refresh.sh  setup-backend.sh  test-backend-local.sh  test-canvas-extraction.py  test-frontend-local.sh  test-integration.sh
static/: index.html
static/assets/: index-CTqqcx30.css  index-D9NYoLlk.js
terraform/: .gitignore  DEPLOYMENT_GUIDE.md  README.md  backend.tf  main.tf  outputs.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
terraform/environments/: dev.tfvars  prod.tfvars  production.tfvars  staging.tfvars
tests/: conftest.py  test_05_01_schema.py  test_05_02_assignment_groups_endpoint.py  test_05_02_sync_assignment_groups.py  test_05_03_late_day_summary.py  test_05_03_posting_flow.py  test_05_03_settings_and_late_days.py  test_06_01_schema.py  test_06_02_sync.py  test_06_03_api.py  test_07_01_schema.py  test_07_02_api.py  test_07_03_overdue.py  test_08_01_grade_distribution.py
(+74 files in other folders)
